fixed some bug on mobile

--- a/assets/style/less/g3w-header.less
+++ b/assets/style/less/g3w-header.less
@@ -73,7 +73,15 @@
       font-size: 1.6em;
     }
     .sub_title {
-      font-size: 1.3em;
+      font-size: 1.4em;
+    }
+  }
+  &.mobile {
+    .main_title {
+      font-size: 1em;
+    }
+    .sub_title {
+      font-size: 0.7em;
     }
   }
 }
